2002-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-image-insert): Don't put the
	transparent face except for Emacs 20.

	* w3m.el (w3m-key-binding): Don't manipulate key bindings if
	w3m.elc has not been loaded (it will fix the problem that the face
	colors might not be specified under Mule 2).

2002-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bitmap.el (w3m-bitmap-transparent-face): Remove.
	(w3m-bitmap-image-insert): Use the list form instead of
	`w3m-bitmap-transparent-face' to make the overlay transparent.

2002-04-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-bitmap.el (w3m-bitmap-convert-arguments)
	(w3m-bitmap-image-face-inherit): New customize values.
	(w3m-create-image): Append argument `w3m-bitmap-convert-arguments'
	when call `w3m-imagick-start-convert-buffer'.
	(w3m-insert-image): If `w3m-bitmap-image-face-inherit' is non-nil,
	inherit the face of bitmap image from the face of text at point.

2002-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (distclean): Remove autom4te*.cache rather than
	autom4te.cache.

	* w3m-bitmap.el (w3m-bitmap-transparent-face): New face.
	(w3m-bitmap-image-insert): Put `w3m-bitmap-transparent-face' to
	overlays; don't use overlays to highlight bitmap images.
	(w3m-insert-image): Add `w3m-bitmap-image-face' to a bitmap image
	as a text property.

2002-04-23  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-toggle-inline-images-internal): Call
	`w3m-insert-image' with the url of image.

	* w3m-xmas.el (w3m-insert-image): Add dummy argument.

	* w3m-e21.el (w3m-insert-image): Add dummy argument.

	* w3m-bitmap.el (w3m-bitmap-cache-image-hook): New hook.
	(w3m-create-image): Run `w3m-bitmap-cache-image-hook' with `url'
	when use the cached image.
	(w3m-insert-image): Add 4th argument `url'. Do nothing which have
	no 'w3m-image property or differ its url.

2002-04-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make emacs-w3m can be compiled by `make slow' with no warnings.